# TIL

agent/AI-Agent-Engineering/: README.md
agent/yozm-ai-agent/: .env  README.md  pyproject.toml
agent/yozm-ai-agent/chapter01/: async_llm_api.py  hello_anthropic.py  hello_anthropic_streaming.py  hello_openai.py  hello_openai_responses.py  hello_openai_streaming.py
agent/yozm-ai-agent/chapter02/: chatbot.py  chatbot2.py  chatbot3_little_prince.py  chatbot4_little_prince_web_ui.py
agent/yozm-ai-agent/chapter03/: hello_langchain.py  hello_langchain2.py  langchain_chat_model.py  langchain_messages.py  langchain_prompt_template_and_output_parser.py  langchain_structured_output.py  prompt_template_example.py  template_example.yaml
agent/yozm-ai-agent/chapter03/embedding_vectorstore/: embedding_with_vectorstore.py  my_first_embedding.py  vectorstore_with_document.py  vectorstore_with_document_loader.py
agent/yozm-ai-agent/chapter03/embedding_vectorstore/documents/: ai_fundamentals.txt  javascript_evolution.txt  python_guide.txt
agent/yozm-ai-agent/chapter03/retriever_rag/: rag_by_duckduckgo.py  retriever_from_vectorstore.py
agent/yozm-ai-agent/chapter03/runnable/: langchain_runnable_branch.py  langchain_runnable_lambda.py  langchain_runnable_lecl.py  langchain_runnable_parallel.py  langchain_runnable_passthrough.py
agent/yozm-ai-agent/chapter03/tools/: langchain_rock_paper_scissors.py
agent/yozm-ai-agent/chapter04/openai_agent_sdk/: hello_agent_sync.py  input_output_guardrail_test.py  news_search_agent.py  simple_multi_agent_by_handoff.py
agent/yozm-ai-agent/chapter05/google-adk/hello_agent/: agent.py
agent/yozm-ai-agent/chapter05/google-adk/loop_agent/: agent.py
agent/yozm-ai-agent/chapter05/google-adk/multi_agent_for_bestseller_book/: agent.py
agent/yozm-ai-agent/chapter05/google-adk/multi_tool_agent/: agent.py
agent/yozm-ai-agent/chapter06/langgraph/: 02_conditional_routing.py  03_persistent_memory.py  04_loop_workflow.py  05_parallel_execution.py  06_tool_calling.py  07_human_in_loop.py  08_subgraph.py  hello_langgraph.py
agent/yozm-ai-agent/chapter07/mcp/: simple_mcp_client.py  simple_mcp_server.py
agent/yozm-ai-agent/chapter09/google_news_multiagent/: config.py  main.py  state.py  utils.py  workflow.py
agent/yozm-ai-agent/chapter10/mcp_langgraph_agent/: chat_agent.py  mcp_server.py
agent/yozm-ai-agent/chapter10/templates/: index.html
(+20 files in other folders)
