[project]
name = "yozm-ai-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "ddgs==9.10.0",
    "duckduckgo-search==8.1.1",
    "faiss-cpu==1.13.2",
    "fastapi==0.128.0",
    "langchain==1.2.7",
    "langchain-anthropic>=1.3.1",
    "langchain-community==0.4.1",
    "langchain-openai>=1.1.7",
    "load-dotenv>=0.1.0",
    "numpy==2.4.1",
    "openai==2.16.0",
    "openai-agents==0.8.0",
    "python-multipart==0.0.22",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "tenacity>=9.1.2",
    "unstructured==0.18.27",
    "uvicorn==0.40.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.ruff.pydocstyle]
convention = "google"
